toolkit/mozapps/extensions/content/aboutaddons.css
:root {
  --addon-icon-size: 32px;
  --main-margin-start: 28px;
  --section-width: 664px;
  --sidebar-width: var(--in-content-sidebar-width);
  --z-index-sticky-container: 1;
  --z-index-popup: 10;
}

@media (max-width: 830px) {
  :root {
    --main-margin-start: 16px;
    
    --sidebar-width: calc(var(--in-content-sidebar-width) - var(--main-margin-start));
  }
}

*|*[hidden] {
  display: none !important;
}

body {
  cursor: default;
  
  min-width: 500px;
}

#full {
  display: grid;
  grid-template-columns: var(--sidebar-width) 1fr;
}

#sidebar {
  position: sticky;
  top: 0;
  height: 100vh;
  display: flex;
  flex-direction: column;
  margin: 0;
  overflow: hidden auto;
}

@media (prefers-reduced-motion) {
  
  #sidebar::after {
    content: "";
    width: 1px;
    height: 100%;
    background-color: var(--in-content-border-color);
    top: 0;
    inset-inline-end: 0;
    position: absolute;
  }
}

#categories {
  display: flex;
  flex-direction: column;
  padding-inline-end: 4px; 
}

.category {
  display: grid;
  grid-template-columns: 1fr auto;
  margin-block: 0;
  align-items: center;
}

.category[badge-count]::after {
  display: inline-block;
  min-width: 20px;
  background-color: var(--blue-50);
  color: #fff;
  font-weight: bold;
  
  border-radius: 1000px;
  padding: 2px 6px;
  content: attr(badge-count);
  text-align: center;
  margin-inline-start: 8px;
  grid-column: 2;
}

.category[name="discover"] {
  background-image: url("chrome://mozapps/skin/extensions/category-discover.svg");
}
.category[name="locale"] {
  background-image: url("chrome://mozapps/skin/extensions/category-languages.svg");
}
.category[name="extension"] {
  background-image: url("chrome://mozapps/skin/extensions/category-extensions.svg");
}
.category[name="theme"] {
  background-image: url("chrome://mozapps/skin/extensions/category-themes.svg");
}
.category[name="plugin"] {
  background-image: url("chrome://mozapps/skin/extensions/category-plugins.svg");
}
.category[name="dictionary"] {
  background-image: url("chrome://mozapps/skin/extensions/category-dictionaries.svg");
}
.category[name="available-updates"] {
  background-image: url("chrome://mozapps/skin/extensions/category-available.svg");
}
.category[name="recent-updates"] {
  background-image: url("chrome://mozapps/skin/extensions/category-recent.svg");
}

.header-name {
  -moz-user-select: initial;
}

.sticky-container {
  background: var(--in-content-page-background);
  width: 100%;
  position: sticky;
  top: 0;
  z-index: var(--z-index-sticky-container);
}

.main-search {
  background: var(--in-content-page-background);
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-inline-start: 28px;
  padding-top: 20px;
  padding-bottom: 30px;
  max-width: var(--section-width);
}

search-addons > search-textbox {
  margin: 0;
  width: 20em;
  min-height: 32px;
}

.search-label {
  margin-inline-end: 8px;
}

.main-heading {
  background: var(--in-content-page-background);
  display: flex;
  margin-inline-start: var(--main-margin-start);
  padding-bottom: 16px;
  max-width: var(--section-width);
}

.spacer {
  flex-grow: 1;
}

#updates-message {
  display: flex;
  align-items: center;
  margin-inline-end: 8px;
}

.back-button {
  margin-inline-end: 16px;
}



#page-header[current-param="plugin"] message-bar[warning-type="safe-mode"] {
  display: none;
}

#main {
  margin-inline-start: var(--main-margin-start);
  margin-bottom: 28px;
  max-width: var(--section-width);
}

global-warnings,
#abuse-reports-messages {
  margin-inline-start: var(--main-margin-start);
  max-width: var(--section-width);
}


message-bar-stack > * {
  margin-bottom: 8px;
}



.list-section-heading {
  font-size: 17px;
  font-weight: 600;
  margin-bottom: 16px;
}

.section {
  margin-bottom: 32px;
}



.addon.card {
  margin-bottom: 16px;
}

addon-card:not([expanded]) > .addon.card[active="false"] {
  opacity: 0.6;
  transition: opacity 150ms, box-shadow 150ms;
}

addon-card:not([expanded])[panelopen] > .addon.card[active="false"],
addon-card:not([expanded]) > .addon.card[active="false"]:focus-within,
addon-card:not([expanded]) > .addon.card[active="false"]:hover {
  opacity: 1;
}

.addon.card:hover {
  box-shadow: var(--card-shadow);
}

addon-card:not([expanded]) > .addon.card:hover {
  box-shadow: var(--card-shadow-hover);
  cursor: pointer;
}

addon-card[expanded] .addon.card {
  padding-bottom: 0;
}

.addon-card-collapsed {
  display: flex;
}

addon-list addon-card > .addon.card {
  -moz-user-select: none;
}

.addon-card-message {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  margin: 8px calc(var(--card-padding) * -1) calc(var(--card-padding) * -1);
}

addon-card[expanded] .addon-card-message {
  border-radius: 0;
  margin-bottom: 0;
}


.card-heading-image {
  

  width: var(--section-width);
  

  height: calc(var(--section-width) * 92 / 680);
  object-fit: cover;
}

.card-heading-icon {
  flex-shrink: 0;
  width: var(--addon-icon-size);
  height: var(--addon-icon-size);
  margin-inline-end: 16px;
  -moz-context-properties: fill;
  fill: currentColor;
}

.card-contents {
  word-break: break-word;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

.addon-name-container {
  
  margin-top: -3px;
  display: flex;
  align-items: center;
}

.addon-name {
  font-size: 16px;
  font-weight: 600;
  line-height: 22px;
  margin: 0;
  margin-inline-end: 8px;
}

.addon-name-link,
.addon-name-link:hover {
  color: var(--in-content-text-color);
  text-decoration: none;
}

.addon-badge {
  display: inline-block;
  margin-inline-end: 8px;
  width: 16px;
  height: 16px;
  background-size: 16px;
  background-repeat: no-repeat;
  background-position: center;
  flex-shrink: 0;
}

.addon-badge-private-browsing-allowed {
  background-image: url("chrome://browser/skin/private-browsing.svg");
}
/* ... */

