Bug 1627495 - part 1: Addons updates in a pending state visible in about:addons and upgradable without browser restart. r=fluent-reviewers,mstriemer,flod,mixedpuppy
Differential Revision: https://phabricator.services.mozilla.com/D72452

UltraBlame original commit: ec1ea283bdea98608578c226e872b590c1af2a6b

--- a/toolkit/mozapps/extensions/content/aboutaddons.css
+++ b/toolkit/mozapps/extensions/content/aboutaddons.css
@@ -238,15 +238,30 @@ addon-list addon-card > .addon.card {
   -moz-user-select: none;
 }
 
-.addon-card-message {
+.addon-card-message,
+.update-postponed-bar {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   margin: 8px calc(var(--card-padding) * -1) calc(var(--card-padding) * -1);
 }
 
-addon-card[expanded] .addon-card-message {
+addon-card[expanded] .addon-card-message,
+addon-card[expanded] .update-postponed-bar {
   border-radius: 0;
   margin-bottom: 0;
+}
+
+addon-card[expanded] .update-postponed-bar + .addon-card-message {
+  
+
+  margin-top: 0px;
+}
+
+.update-postponed-bar + .addon-card-message {
+  
+
+
+  margin-top: 12px;
 }
 
 
